# cost-model

./: .flake8  .gitignore  AUDIT_PARAMETER_CONNECTIONS.md  CLAUDE.md  FINAL_PRODUCTION_READINESS_ASSESSMENT.md  Gemini.html  PANDAS_FUTUREWARNINGS_FIX_SUMMARY.md  PANDAS_WARNINGS_FIX_SUMMARY.md  PRECISION_CAMPAIGN_RESULTS.md  README.md  REFACTORING_SUMMARY.md  age_preservation_analysis_summary.md  analyze_age_preservation_campaign.py  analyze_all_campaigns.py  analyze_census.py  analyze_production_validation.py  analyze_starting_age_distribution.py  analyze_successful_configs.py  campaign4_hiring_termination_analysis.json  campaign6_hiring_termination_analysis.json  campaign_20250606_analysis_summary.md  campaign_5_final_calibration_summary.md  campaign_5_final_results_summary.md  campaign_5_progress_monitor.md  check_fix_results.py  check_new_hire_terms.py  comprehensive_best_config_analysis.md  conftest.py  debug_comp_engine.py  debug_compensation_trace.py  debug_config_loading.py  debug_final_compensation_bug.py  debug_indexing_issue.py  debug_nh_termination_root_cause.py  debug_orchestrator_compensation.py  debug_snapshot_comparison.py  dummy_census_2020.csv  dummy_census_2021.csv  dummy_census_2022.csv  dummy_census_2023.csv  (+75 more)
.windsurf/: settings.json
agents/: AGENTS.md  behavior.py  compensation.py  contributions.py  deferral.py  eligibility.py  employee_agent.py  state.py
aggressive_3_percent/: EXTREME_20250606_212508.yaml  HIGH_20250606_212505.yaml  MODERATE_20250606_212504.yaml  ULTRA_20250606_212509.yaml  VERY_HIGH_20250606_212506.yaml
baseline_test/: baseline_annual_comp_test.yaml  zero_growth_test.yaml
campaign_3_results/: best_config.yaml  tuning_results.json
campaign_4_results/: best_config.yaml  tuning_results.json
campaign_5_final_calibration_results/: best_config.yaml  tuning_results.json
campaign_6_results/: best_config.yaml  test_maintain_headcount.yaml  tuning_results.json
campaign_6_test/: best_config.yaml  tuning_results.json
campaign_final_results/: best_config.yaml  best_config_production_validation.yaml  tuning_results.json
campaign_fix_validation_results/: best_config.yaml  tuning_results.json
campaign_full_results/: best_config.yaml  tuning_results.json
campaign_new_results/: best_config.yaml  tuning_results.json
campaign_round2_results/: best_config 2.yaml  best_config.yaml  tuning_results.json
campaign_test_results/: best_config.yaml  tuning_results.json
config/: best_compensation.yaml  compensation.yaml  config.yaml  custom_promotion_matrix.yaml  default.yaml  defaults.yaml  dev_tiny.yaml  example.yaml  hazard_baseline_test.yaml  hazard_defaults.yaml  hazard_high_early_attrition_test.yaml  hazard_high_late_attrition_test.yaml  hazard_promotion_baseline_test.yaml  hazard_promotion_high_early_test.yaml  hazard_promotion_high_mid_test.yaml  hazard_promotion_low_late_test.yaml  mc_packages.json  merged_config.yaml  prod.yaml  simulation_params.yaml  test.yaml  test_age_mult_baseline.yaml  test_age_mult_modified.yaml  test_age_sensitivity_baseline.yaml  test_age_sensitivity_baseline.yaml.yaml  test_cola_modified.yaml  test_merit_base_baseline.yaml  test_merit_base_modified.yaml  test_term_base_rate_baseline.yaml  test_term_base_rate_modified.yaml  tuning_baseline.yaml  zz_best_compensation.yaml  zz_compensation.yaml  zz_config.yaml  zz_dev.yaml  zz_merged_config.yaml  zz_simulation_params.yaml
configs/: config.yaml  dev_tiny.yaml
cost_model/: __init__.py  mc_loader.py  sampler.py  scenario_loader.py  simulation.py
data/: census_data.csv  census_preprocessed.csv  census_preprocessed.parquet  census_preprocessed_backup.parquet  census_template.parquet  config.yaml  cox_baseline_hazard.csv  dummy100_2024 2.csv  generated_hazard_table_yaml_template.csv  hazard_model_params.yaml  hazard_table.parquet  km_survival_function.csv
defaults/: defaults.yaml
docs/: abm_approach.md  apr 26.md  apr 29.md  apr_21_debug.md  apr_21_upgrade.md  apr_22_debug.md  apr_22_refractor.md  apr_23_debug.md  apr_23_fix_term 2.md  apr_24_testing 2.md  archived_files.md  build_term_model.md  cli_usage.md  columns.md  compensation_system_architecture.md  compensation_troubleshooting_guide.md  config_documentation.md  fix.md  growth_calc.md  index.md  june_10_to_do_list.md  major_upgrade.md  match_formulas.md  match_update.md  migration_log.md  migration_task_update.md  migration_tasks.md  onboarding_and_visualization.md  package.md  phase_10_data_governance.md  phase_1_headcount.md  phase_2_compensation.md  phase_3_plan_features.md  phase_4_validation_ci.md  phase_5_performance_scaling.md  phase_6_web_frontend.md  phase_7_analyst_ui.md  phase_8_scenario_optimization.md  phase_9_ai_assistants.md  program_tree.md  (+10 more)
engine/: config_loader.py
loaders/: __init__.py  (+2 more)
(+1770 files in other folders)
