[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-model"
version = "0.1.0"
description = "Retirement-plan cost simulation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<2.0",
  "scipy>=1.15,<2.0",
  "scikit-learn>=1.2,<2.0",
  "lifelines>=0.28,<0.29",
  "matplotlib>=3.10,<4.0",
  "pyarrow>=15.0,<16.0",
  "lightgbm>=4.3,<5.0",
  "joblib>=1.1,<2.0",
  "pyyaml>=6.0,<7.0",
  "loguru>=0.7,<1.0",
  "Cerberus>=1.3,<2.0",
  "python-dateutil>=2.9,<3.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2.0",
  "flake8>=7.2,<8.0",
  "black>=24.10,<25.0",
  "isort>=5.13,<6.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=4.1,<5.0",
  "pytest-mock>=3.14,<4.0",
  "coverage>=7.8,<8.0",
  "types-python-dateutil>=2.9.0.20250516",
  "pylint>=3.3,<4.0"
]

[project.scripts]
cost-model = "cost_model.projections.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cost_model*"]

[tool.setuptools.package-data]
"cost_model" = ["py.typed"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = ["build", "dist", ".venv"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["cost_model"]